--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@vue/compiler-sfc": "^3.2.47",
     "babel-loader": "^9.1.2",
     "babel-plugin-module-resolver": "^5.0.0",
@@ -20,6 +21,9 @@
     "gulp-rename": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
     "lerna": "^6.0.3",
+    "rollup": "^3.16.0",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "rollup-plugin-vue": "^6.0.0",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
@@ -41,7 +45,7 @@
     "website-dev": "webpack serve --config ./website/webpack.config.js",
     "build:theme": " gulp build --gulpfile packages/theme-chalk/gulpfile.js",
     "build": "webpack --config builds/webpack.config.js",
-    "build:esm-bundle": "rollup -c ./builds/rollup.config.bundle.js",
-    "build:esm": "rollup -c ./builds/rollup.config.js"
+    "build:esm-bundle": "rollup -c ./builds/rollup.config.bundle.cjs --bundleConfigAsCjs",
+    "build:esm": "rollup -c ./builds/rollup.config.cjs --bundleConfigAsCjs"
   }
 }
